--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ local.properties
 
 # cache
 #
-dist/
+dist/**
 
 # cache
 #
@@ -70,4 +70,4 @@ buck-out/
 
 # react-native-config codegen
 ios/tmp.xcconfig
-README.md
+
