--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "husky": "^4.2.3",
     "node-sass": "^4.13.1",
     "prettier": "1.19.1",
+    "ts-loader": "^6.2.1",
     "tslint": "^6.1.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
@@ -24,7 +25,8 @@
     "lodash": "^4.17.15",
     "parcel-bundler": "^1.12.4",
     "phaser": "^3.22.0",
-    "phaser3-rex-plugins": "^1.1.8"
+    "phaser3-rex-plugins": "^1.1.8",
+    "src": "^1.1.2"
   },
   "husky": {
     "hooks": {
