--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "es6", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "allowJs": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/phaser/types/phaser.d.ts",
